refactor(makefile): cleanup and add release, dev-release target

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -1,36 +1,44 @@
 include ../includes.mk
 
-build: check-docker
-	docker build -t deis/builder:$(BUILD_TAG) .
+COMPONENT = builder
+IMAGE = $(IMAGE_PREFIX)$(COMPONENT):$(BUILD_TAG)
+DEV_IMAGE = $(DEV_REGISTRY)/$(IMAGE)
 
-push: check-docker check-registry check-deisctl
-	docker tag deis/builder:$(BUILD_TAG) $(REGISTRY)/deis/builder:$(BUILD_TAG)
-	docker push $(REGISTRY)/deis/builder:$(BUILD_TAG)
-	deisctl config builder set image=$(REGISTRY)/deis/builder:$(BUILD_TAG)
+build: check-docker
+	docker build -t $(IMAGE) .
 
 clean: check-docker check-registry
-	docker rmi deis/builder:$(BUILD_TAG)
-	docker rmi $(REGISTRY)/deis/builder:$(BUILD_TAG)
+	rm -f deisctl
+	docker rmi $(IMAGE)
 
-full-clean: check-docker check-registry
-	docker images -q deis/builder | xargs docker rmi -f
-	docker images -q $(REGISTRY)/deis/builder | xargs docker rmi -f
+full-clean: check-docker check-registry clean
+	docker images -q $(IMAGE_PREFIX)$(COMPONENT) | xargs docker rmi -f
 
 install: check-deisctl
-	deisctl scale builder=1
+	deisctl scale $(COMPONENT)=1
 
 uninstall: check-deisctl
-	deisctl scale builder=0
+	deisctl scale $(COMPONENT)=0
 
 start: check-deisctl
-	deisctl start builder
+	deisctl start $(COMPONENT)
 
 stop: check-deisctl
-	deisctl stop builder
+	deisctl stop $(COMPONENT)
 
 restart: stop start
 
 run: install start
+
+dev-release: check-registry check-deisctl
+	docker tag $(IMAGE) $(DEV_IMAGE)
+	docker push $(DEV_IMAGE)
+	deisctl config $(COMPONENT) set image=$(DEV_IMAGE)
+
+release:
+	docker push $(IMAGE)
+
+deploy: build dev-release restart
 
 test: test-unit test-functional
 
