--- a/client/Makefile
+++ b/client/Makefile
@@ -1,4 +1,9 @@
 
+build: setup-venv
+	venv/bin/pip install docopt==0.6.2 python-dateutil==2.2 requests==2.3.0 pyinstaller==2.1 termcolor==1.1.0
+	venv/bin/pyinstaller deis.spec
+	chmod +x dist/deis
+
 # Install deis client locally through pip.
 install:
 	pip install .
