fix(deisctl): refresh-units uses $HOME/.deis/units by default

--- a/deisctl/Makefile
+++ b/deisctl/Makefile
@@ -10,10 +10,17 @@ build:
 installer:
 	rm -rf dist && mkdir -p dist
 	CGO_ENABLED=0 godep go build -a -ldflags '-s' -o dist/deisctl .
-	@if [ ! -d makeself ]; then git clone -b deisctl-hack https://github.com/deis/makeself.git; fi
-	PATH=./makeself:$$PATH makeself.sh --bzip2 --nox11 --target /usr/local/bin dist \
+	@if [ ! -d makeself ]; then git clone -b single-binary https://github.com/deis/makeself.git; fi
+	PATH=./makeself:$$PATH BINARY=deisctl makeself.sh --bzip2 --current --nox11 dist \
 		dist/deisctl-`cat deis-version`-`go env GOOS`-`go env GOARCH`.run "Deis Control Utility" \
-		"deisctl refresh-units && chmod 755 /var/lib/deis /var/lib/deis/units && chmod -R 644 /var/lib/deis/units/*"
+		"./deisctl refresh-units \
+		&& echo \
+		&& echo '\033[0;36mdeisctl\033[0m is in the current directory and unit files are' \
+		&& echo 'in $$HOME/.deis/units. Please move \033[0;36mdeisctl\033[0m to a' \
+		&& echo 'directory in your search PATH.' \
+		&& echo \
+		&& echo 'See http://docs.deis.io/ for documentation.' \
+		&& echo"
 
 install:
 	godep go install -v .
