--- a/builder/slugbuilder/Dockerfile
+++ b/builder/slugbuilder/Dockerfile
@@ -1,7 +1,12 @@
 FROM progrium/cedarish:cedar
 MAINTAINER OpDemand <info@opdemand.com>
 
-RUN useradd slugbuilder --home-dir /app
+RUN mkdir /app
+RUN addgroup --quiet --gid 2000 slug && \
+  useradd slug --uid=2000 --gid=2000 --home-dir /app --no-create-home
+RUN chown -R slug:slug /app
+USER slug
+ENV HOME /app
 
 ADD ./builder/ /tmp/builder
 RUN /tmp/builder/install-buildpacks
