--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu-debootstrap:14.04
 ENV DEBIAN_FRONTEND noninteractive
 
 # install common packages
-RUN apt-get update && apt-get install -y libgeoip1 curl && apt-get clean
+RUN apt-get update && apt-get install -y libgeoip1 curl net-tools && apt-get clean
 
 # install etcdctl
 RUN curl -sSL -o /usr/local/bin/etcdctl https://s3-us-west-2.amazonaws.com/opdemand/etcdctl-v0.4.6 \
