--- a/deisctl/units/deis-publisher.service
+++ b/deisctl/units/deis-publisher.service
@@ -7,9 +7,9 @@ After=docker.socket etcd.service
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
 ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/publisher`; docker history $IMAGE >/dev/null || docker pull $IMAGE"
-ExecStartPre=/bin/sh -c "docker inspect deis-logger >/dev/null && docker rm -f deis-publisher || true"
+ExecStartPre=/bin/sh -c "docker inspect deis-publisher >/dev/null && docker rm -f deis-publisher || true"
 ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/publisher` && docker run --name deis-publisher --rm -e HOST=$COREOS_PRIVATE_IPV4 -e ETCD_HOST=$COREOS_PRIVATE_IPV4 -v /var/run/docker.sock:/var/run/docker.sock $IMAGE"
-ExecStopPost=/usr/bin/docker stop deis-logger
+ExecStopPost=/usr/bin/docker stop deis-publisher
 
 [Install]
 WantedBy=multi-user.target
