fix(router): change nginx directory to /opt/nginx.

--- a/router/conf.d/nginx.conf.toml
+++ b/router/conf.d/nginx.conf.toml
@@ -1,6 +1,6 @@
 [template]
 src   = "nginx.conf"
-dest  = "/nginx/conf/nginx.conf"
+dest  = "/opt/nginx/conf/nginx.conf"
 uid = 0
 gid = 0
 mode  = "0644"
@@ -12,4 +12,4 @@ keys = [
   "/deis/builder",
 ]
 check_cmd  = "/app/bin/check {{ .src }}"
-reload_cmd = "/nginx/sbin/nginx -s reload"
+reload_cmd = "/opt/nginx/sbin/nginx -s reload"
