--- a/deisctl/units/deis-registry-data.service
+++ b/deisctl/units/deis-registry-data.service
@@ -4,8 +4,8 @@ Description=deis-registry-data
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStartPre=/bin/sh -c "docker history deis/base:latest >/dev/null 2>&1 || docker pull deis/base:latest"
-ExecStart=/bin/sh -c "docker inspect deis-registry-data >/dev/null 2>&1 || docker run --name deis-registry-data -v /data deis/base:latest /bin/true"
+ExecStartPre=/bin/sh -c "docker history ubuntu:14.04 >/dev/null 2>&1 || docker pull ubuntu:14.04"
+ExecStart=/bin/sh -c "docker inspect deis-registry-data >/dev/null 2>&1 || docker run --name deis-registry-data -v /data ubuntu:14.04 /bin/true"
 
 [Install]
 WantedBy=multi-user.target
