feat(router): Improved router defaults
Use recommended values from
https://github.com/h5bp/server-configs-nginx/blob/master/nginx.conf

--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -2,7 +2,7 @@
 daemon off;
 
 user www-data;
-worker_processes 4;
+worker_processes auto;
 pid /run/nginx.pid;
 
 events {
@@ -26,10 +26,11 @@ http {
     gzip_comp_level {{ .deis_router_gzipCompLevel }};
     gzip_disable {{ .deis_router_gzipDisable }};
     gzip_http_version {{ .deis_router_gzipHttpVersion }};
+    gzip_min_length {{ .deis_router_gzipMinLength }};
     gzip_types {{ .deis_router_gzipTypes }};
     gzip_proxied {{ .deis_router_gzipProxied }};
     gzip_vary {{ .deis_router_gzipVary }};{{ end }}
-    
+
     client_max_body_size {{ or (.deis_router_bodySize) "1m" }};
 
     # send logs to STDOUT so they can be seen using 'docker logs'
