--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -33,6 +33,15 @@ http {
     gzip_proxied {{ or .deis_router_gzipProxied "any" }};
     gzip_vary {{ or .deis_router_gzipVary "on" }};
     {{ end }}
+
+    {{ $useFirewall := or .deis_router_firewall_enabled "true" }}{{ if eq $useFirewall "true" }}# include naxsi rules
+    include     /opt/nginx/firewall/naxsi_core.rules;
+    include     /opt/nginx/firewall/naxsi_core.rules;
+    include     /opt/nginx/firewall/web_apps.rules;
+    include     /opt/nginx/firewall/scanner.rules;
+    include     /opt/nginx/firewall/web_server.rules;{{ end }}
+    {{ $firewallErrorCode := or (.deis_router_firewall_errorCode) "400" }}
+
     client_max_body_size {{ or (.deis_router_bodySize) "1m" }};
 
     log_format upstreaminfo '[$time_local] - $remote_addr - $remote_user - $status - "$request" - $bytes_sent - "$http_referer" - "$http_user_agent" - "$server_name" - $upstream_addr';
@@ -59,6 +68,7 @@ http {
 
         {{ if .deis_controller_host }}
         location / {
+            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}            
             proxy_buffering             off;
             proxy_set_header            Host $host;
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -74,7 +84,11 @@ http {
             return 503;
         }
         {{ end }}
-    }
+
+        {{ if eq $useFirewall "true" }}location /RequestDenied {
+            return {{ $firewallErrorCode }};
+        }{{ end }}         
+    }{{ end }}
     ## end deis-controller
 
     ## start deis-store-gateway
@@ -92,6 +106,7 @@ http {
 
         {{ if .deis_store_gateway_host }}
         location / {
+            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}                    
             proxy_buffering             off;
             proxy_set_header            Host $host;
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -125,6 +140,7 @@ http {
 
         {{ if $service.Nodes }}
         location / {
+            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}                    
             proxy_buffering             off;
             proxy_set_header            Host $host;
             {{ if ne $useSSL "false" }}
@@ -145,11 +161,16 @@ http {
 
             proxy_pass                  http://{{ Base $service.Key }};
         }
+
         {{ else }}
         location / {
             return 503;
         }
         {{ end }}
+
+        {{ if eq $useFirewall "true" }}location /RequestDenied {
+            return {{ $firewallErrorCode }};
+        }{{ end }}         
     }
     {{ end }}
     ## end service definitions for each application
