feat(registry): image without development libraries to reduce the size.

--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -13,33 +13,6 @@ RUN curl -sSL -o /usr/local/bin/etcdctl https://s3-us-west-2.amazonaws.com/opdem
 RUN curl -sSL -o /usr/local/bin/confd https://s3-us-west-2.amazonaws.com/opdemand/confd-v0.5.0-json \
     && chmod +x /usr/local/bin/confd
 
-# install required packages (copied from dotcloud/docker-registry Dockerfile)
-RUN sed -i 's/main$/main universe/' /etc/apt/sources.list
-RUN apt-get update && apt-get install -y git-core build-essential python-dev \
-    libevent-dev python-openssl liblzma-dev
-
-# install pip
-RUN curl -sSL https://raw.githubusercontent.com/pypa/pip/1.5.6/contrib/get-pip.py | python -
-
-# create a registry user
-RUN useradd -s /bin/bash registry
-
-# add the docker registry source from github
-RUN git clone https://github.com/deis/docker-registry /docker-registry && \
-    cd /docker-registry && \
-    git checkout 94e7707 && \
-    chown -R registry:registry /docker-registry
-
-# install boto configuration
-RUN cp /docker-registry/config/boto.cfg /etc/boto.cfg
-RUN cd /docker-registry && pip install -r requirements/main.txt
-
-# Install core
-RUN pip install /docker-registry/depends/docker-registry-core
-
-# Install registry
-RUN pip install file:///docker-registry#egg=docker-registry[bugsnag,newrelic,cors]
-
 ENV DOCKER_REGISTRY_CONFIG /docker-registry/config/config.yml
 ENV SETTINGS_FLAVOR deis
 
@@ -48,3 +21,5 @@ WORKDIR /app
 CMD ["/app/bin/boot"]
 EXPOSE 5000
 ADD . /app
+
+RUN /app/build.sh
