ref(logger): just use go. remove bash script.

--- a/logger/Makefile
+++ b/logger/Makefile
@@ -2,10 +2,14 @@ include ../includes.mk
 
 COMPONENT = logger
 IMAGE = $(IMAGE_PREFIX)$(COMPONENT):$(BUILD_TAG)
+BUILD_IMAGE := $(COMPONENT)-build
 DEV_IMAGE = $(DEV_REGISTRY)/$(IMAGE)
 
 build: check-docker
-	docker build -t $(IMAGE) .
+	docker build -t $(BUILD_IMAGE) .	
+	docker cp `docker run -d $(BUILD_IMAGE)`:/go/bin/logger image/bin/
+	docker build -t $(IMAGE) image
+	rm -rf image/bin/logger
 
 clean: check-docker check-registry
 	docker rmi $(IMAGE)
