--- a/deisctl/units/deis-controller.service
+++ b/deisctl/units/deis-controller.service
@@ -11,6 +11,8 @@ ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/controller` && doc
 ExecStartPre=/bin/sh -c "docker inspect deis-controller >/dev/null && docker rm -f deis-controller || true"
 ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/controller` && docker run --name deis-controller -v /var/run/fleet.sock:/var/run/fleet.sock --rm -p 8000:8000 -e EXTERNAL_PORT=8000 -e HOST=$COREOS_PRIVATE_IPV4 --volumes-from=deis-logger $IMAGE"
 ExecStopPost=-/usr/bin/docker stop deis-controller
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
