--- a/deisctl/units/deis-database.service
+++ b/deisctl/units/deis-database.service
@@ -8,6 +8,8 @@ ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/database` && docke
 ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/database` && docker start -a deis-database >/dev/null || docker run --name deis-database -p 5432:5432 -e EXTERNAL_PORT=5432 -e HOST=$COREOS_PRIVATE_IPV4 $IMAGE"
 ExecStopPost=-/bin/bash -c "nsenter --pid --uts --mount --ipc --net --target $(docker inspect --format='{{ .State.Pid }}' deis-database) sudo service postgresql stop"
 ExecStopPost=-/usr/bin/docker stop deis-database
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
