--- a/deisctl/units/deis-logger.service
+++ b/deisctl/units/deis-logger.service
@@ -10,6 +10,8 @@ ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/logger` && docker 
 ExecStartPre=/bin/sh -c "docker inspect deis-logger >/dev/null && docker rm -f deis-logger || true"
 ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/logger` && docker run --name deis-logger --rm -p 514:514/udp -e EXTERNAL_PORT=514 -e HOST=$COREOS_PRIVATE_IPV4 --volumes-from deis-logger-data $IMAGE"
 ExecStopPost=-/usr/bin/docker stop deis-logger
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
