--- a/deisctl/units/deis-registry.service
+++ b/deisctl/units/deis-registry.service
@@ -8,6 +8,8 @@ ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/registry` && docke
 ExecStartPre=/bin/sh -c "docker inspect deis-registry >/dev/null && docker rm -f deis-registry || true"
 ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/registry` && docker run --name deis-registry --rm -p 5000:5000 -e EXTERNAL_PORT=5000 -e HOST=$COREOS_PRIVATE_IPV4 $IMAGE"
 ExecStopPost=-/usr/bin/docker stop deis-registry
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
