--- a/deisctl/units/deis-store-daemon.service
+++ b/deisctl/units/deis-store-daemon.service
@@ -7,6 +7,8 @@ TimeoutStartSec=20m
 ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/store-daemon` && docker history $IMAGE >/dev/null 2>&1 || docker pull $IMAGE"
 ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/store-daemon` && docker start -a deis-store-daemon >/dev/null || docker run --name deis-store-daemon -e HOST=$COREOS_PRIVATE_IPV4 -p 6800 --net host $IMAGE"
 ExecStopPost=-/usr/bin/docker stop deis-store-daemon
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
