chore(publisher): Add missing deploy target
`make -C component deploy` should work for all deis components

--- a/publisher/Makefile
+++ b/publisher/Makefile
@@ -32,6 +32,8 @@ set-image: check-deisctl
 
 release: check-docker
 	docker push $(DOCKER_IMAGE)
+	
+deploy: build dev-release restart
 
 restart: stop start
 
