--- a/deisctl/units/deis-cache.service
+++ b/deisctl/units/deis-cache.service
@@ -7,7 +7,7 @@ TimeoutStartSec=20m
 ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/cache` && docker history $IMAGE >/dev/null || docker pull $IMAGE"
 ExecStartPre=/bin/sh -c "docker inspect deis-cache >/dev/null && docker rm -f deis-cache || true"
 ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/cache` && docker run --name deis-cache --rm -p 6379:6379 -e EXTERNAL_PORT=6379 -e HOST=$COREOS_PRIVATE_IPV4 $IMAGE"
-ExecStopPost=-/usr/bin/docker stop deis-cache
+ExecStopPost=-/usr/bin/docker rm -f deis-cache
 Restart=on-failure
 RestartSec=5
 
