--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -23,19 +23,19 @@ http {
     default_type application/octet-stream;
     {{ if .deis_router_gzip }}
     gzip {{ .deis_router_gzip }};
-    gzip_comp_level {{ .deis_router_gzipCompLevel }};
-    gzip_disable {{ .deis_router_gzipDisable }};
-    gzip_http_version {{ .deis_router_gzipHttpVersion }};
-    gzip_min_length {{ .deis_router_gzipMinLength }};
-    gzip_types {{ .deis_router_gzipTypes }};
-    gzip_proxied {{ .deis_router_gzipProxied }};
-    gzip_vary {{ .deis_router_gzipVary }};{{ end }}
-
+    gzip_comp_level {{ or .deis_router_gzipCompLevel "5" }};
+    gzip_disable {{ or .deis_router_gzipDisable "\"msie6\"" }};
+    gzip_http_version {{ or .deis_router_gzipHttpVersion "1.1" }};
+    gzip_min_length {{ or .deis_router_gzipMinLength "256" }};
+    gzip_types {{ or .deis_router_gzipTypes "application/atom+xml application/javascript application/json application/rss+xml application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/svg+xml image/x-icon text/css text/plain text/x-component" }};
+    gzip_proxied {{ or .deis_router_gzipProxied "any" }};
+    gzip_vary {{ or .deis_router_gzipVary "on" }};
+    {{ end }}
     client_max_body_size {{ or (.deis_router_bodySize) "1m" }};
 
     # send logs to STDOUT so they can be seen using 'docker logs'
-    access_log /dev/stdout;
-    error_log /dev/stdout;
+    access_log /opt/nginx/logs/access.log;
+    error_log  /opt/nginx/logs/error.log;
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -141,7 +141,7 @@ http {
 ## start builder
 {{ if .deis_builder_host }}
 tcp {
-    access_log /dev/stdout;
+    access_log /opt/nginx/logs/git.log;
     tcp_nodelay on;
     timeout {{ or (.deis_router_builder_timeout_tcp) "1200000" }};
 
