--- a/router/parent/Dockerfile
+++ b/router/parent/Dockerfile
@@ -1,7 +1,17 @@
-FROM ubuntu-debootstrap:14.04
+FROM golang:1.3
 
-ADD . /tmp
+ADD build.sh /go/src/github.com/deis/deis/router/build.sh
 
-RUN /tmp/build.sh
+WORKDIR /go/src/github.com/deis/deis/router
+
+RUN DOCKER_BUILD=true /go/src/github.com/deis/deis/router/build.sh
 
 RUN tar -C /opt/nginx -czf /nginx.tgz .
+
+ADD boot.go /go/src/github.com/deis/deis/router/boot.go
+
+RUN go get
+
+RUN CGO_ENABLED=0 go build -a -ldflags '-s' boot.go
+
+RUN cp /go/src/github.com/deis/deis/router/boot /go/bin/boot
