feat(router): add optional TLS support

--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -50,8 +50,7 @@ http {
 
     server {
         server_name ~^deis\.(?<domain>.+)$;
-        server_name_in_redirect off;
-        port_in_redirect off;
+        include deis.conf;
 
         location / {
             proxy_buffering             off;
@@ -75,8 +74,7 @@ http {
 
     server {
         server_name ~^deis-store\.(?<domain>.+)$;
-        server_name_in_redirect off;
-        port_in_redirect off;
+        include deis.conf;
 
         location / {
             proxy_buffering             off;
@@ -101,9 +99,7 @@ http {
 
     server {
         server_name ~^{{ Base $service.Key }}\.(?<domain>.+)${{ range $app_domains := $domains }}{{ if eq (Base $service.Key) (Base $app_domains.Key) }} {{ $app_domains.Value }}{{ end }}{{ end }};
-
-        server_name_in_redirect off;
-        port_in_redirect off;
+        include deis.conf;
 
         location / {
             proxy_buffering             off;
