--- a/router/templates/deis.conf
+++ b/router/templates/deis.conf
@@ -2,8 +2,7 @@ server_name_in_redirect off;
 port_in_redirect off;
 
 {{ if .deis_router_sslCert }}
-listen 443;
-ssl on;
+listen 443 ssl spdy;
 ssl_certificate /etc/ssl/deis.cert;
 ssl_certificate_key /etc/ssl/deis.key;
 {{ end }}
