style(*): use golint recursively on all packages

--- a/deisctl/Makefile
+++ b/deisctl/Makefile
@@ -35,7 +35,7 @@ setup-gotools:
 
 test-style:
 	go vet ./...
-	-golint *.go client/*.go cmd/*.go config/*.go constant/*.go lock/*.go update/*.go utils/*.go
+	-golint ./...
 
 test: test-style
 	godep go test -v -cover ./...
