--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -104,18 +104,19 @@ http {
         location / {
             proxy_buffering             off;
             proxy_set_header            Host $host;
-            proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header            X-Forwarded-Proto $scheme;
+            proxy_set_header            X-Forwarded-For   $proxy_add_x_forwarded_for;
             proxy_redirect              off;
             proxy_connect_timeout       10s;
             proxy_send_timeout          1200s;
             proxy_read_timeout          1200s;
             proxy_http_version          1.1;
-            proxy_set_header            Upgrade $http_upgrade;
-            proxy_set_header            Connection $connection_upgrade;
+            proxy_set_header            Upgrade           $http_upgrade;
+            proxy_set_header            Connection        $connection_upgrade;
 
             proxy_next_upstream         error timeout http_502 http_503 http_504;
 
-            add_header                  X-Deis-Upstream $upstream_addr;
+            add_header                  X-Deis-Upstream   $upstream_addr;
 
             proxy_pass                  http://{{ Base $service.Key }};
         }
