fix(router): remove store gateway body limit

--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -75,6 +75,8 @@ http {
     server {
         server_name ~^deis-store\.(?<domain>.+)$;
         include deis.conf;
+        
+        client_max_body_size            0;
 
         location / {
             proxy_buffering             off;
