fix(contrib): add --insecure-registry flag for docker 1.3.2
Deis' registry is insecure. Docker is secure-by-default, which means
that we must now whitelist insecure registries on each and every daemon.

--- a/contrib/coreos/user-data.example
+++ b/contrib/coreos/user-data.example
@@ -63,6 +63,10 @@ write_files:
       function nse() {
         docker exec -it $1 bash
       }
+  - path: /etc/systemd/system/docker.service.d/50-insecure-registry.conf
+    content: |
+        [Service]
+        Environment=DOCKER_OPTS='--insecure-registry="10.0.0.0/8"'
   - path: /run/deis/bin/get_image
     permissions: '0755'
     content: |
