ref(router): clean up firewall addition

--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -34,7 +34,7 @@ http {
     gzip_vary {{ or .deis_router_gzipVary "on" }};
     {{ end }}
 
-    {{ $useFirewall := or .deis_router_firewall_enabled "true" }}{{ if eq $useFirewall "true" }}# include naxsi rules
+    {{ $useFirewall := or .deis_router_firewall_enabled "false" }}{{ if eq $useFirewall "true" }}# include naxsi rules
     include     /opt/nginx/firewall/naxsi_core.rules;
     include     /opt/nginx/firewall/naxsi_core.rules;
     include     /opt/nginx/firewall/web_apps.rules;
@@ -68,7 +68,7 @@ http {
 
         {{ if .deis_controller_host }}
         location / {
-            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}            
+            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}
             proxy_buffering             off;
             proxy_set_header            Host $host;
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -87,8 +87,8 @@ http {
 
         {{ if eq $useFirewall "true" }}location /RequestDenied {
             return {{ $firewallErrorCode }};
-        }{{ end }}         
-    }{{ end }}
+        }{{ end }}
+    }
     ## end deis-controller
 
     ## start deis-store-gateway
@@ -106,7 +106,7 @@ http {
 
         {{ if .deis_store_gateway_host }}
         location / {
-            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}                    
+            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}
             proxy_buffering             off;
             proxy_set_header            Host $host;
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -140,7 +140,7 @@ http {
 
         {{ if $service.Nodes }}
         location / {
-            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}                    
+            {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}
             proxy_buffering             off;
             proxy_set_header            Host $host;
             {{ if ne $useSSL "false" }}
@@ -161,16 +161,14 @@ http {
 
             proxy_pass                  http://{{ Base $service.Key }};
         }
-
         {{ else }}
         location / {
             return 503;
         }
         {{ end }}
-
         {{ if eq $useFirewall "true" }}location /RequestDenied {
             return {{ $firewallErrorCode }};
-        }{{ end }}         
+        }{{ end }}
     }
     {{ end }}
     ## end service definitions for each application
