fix(builder): delete images on destroy

--- a/builder/image/conf.d/check-repos.toml
+++ b/builder/image/conf.d/check-repos.toml
@@ -6,6 +6,7 @@ gid = 0
 mode  = "0755"
 keys = [
   "/deis/services",
+  "/deis/registry",
 ]
 reload_cmd = "/home/git/check-repos"
 check_cmd = "/app/bin/check {{ .src }}"
